[tool.poetry]
name = "dc-assignments"
version = "0.1.0"
description = ""
authors = ["fabifont <fabio.fontana@mailbox.org>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.1"
humanfriendly = "^10.0"
requests = "^2.28.1"
plotly = "^5.11.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
pyright = "^1.1.276"
black = "^22.10.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
